--- a/my/templates/lineaBaseManager.html
+++ b/my/templates/lineaBaseManager.html
@@ -656,13 +656,19 @@
 
 {% endblock %} {% block body %}
 <h2>Administracion de Lineas Base</h2>
-<td><label>Fase:</label><select id="comboBoxFases"
-	style="display: block; margin-bottom: 12px; padding: 0.4em; width: auto;"
+<table>
+<tr>
+<td><label>Fase: </label>
+</td>
+<td>
+<select id="comboBoxFases"
+	style="display: block; margin-bottom: 12px; padding: 6px; width: auto;"
 	class="ui-widget-content ui-corner-all">
 		<option value="0">(Ninguna)</option>
 
 </select></td>
-
+</tr>
+</table>
 
 
 <tr>
