--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -1,81 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: #E6E6E6;">
 <header>
 
-	
-	<link rel="stylesheet" type="text/css" media="screen" 
+
+	<link rel="stylesheet" type="text/css" media="screen"
 		href="{{ url_for('static', filename='css/redmond/jquery-ui-1.9.2.custom.css') }}" />
 	<link rel="stylesheet" type="text/css" media="screen"
 		href="{{ url_for('static', filename='css/ui.jqgrid.css') }}" />
 	<!-- <link rel="stylesheet" type="text/css" href="/static/css/stylem.css" />-->
-	
-	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.8.3.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.maskedinput.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.number.js') }}"></script>
+
+	<script type="text/javascript"
+		src="{{ url_for('static', filename='js/jquery-1.8.3.js') }}"></script>
+	<script type="text/javascript"
+		src="{{ url_for('static', filename='js/jquery.maskedinput.js') }}"></script>
+	<script type="text/javascript"
+		src="{{ url_for('static', filename='js/jquery.number.js') }}"></script>
 	<script type="text/javascript"
 		src="{{ url_for('static', filename='js/jquery-ui-1.9.2.custom.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='js/i18n/grid.locale-en.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.jqGrid.min.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='js/WebToolKit.MD5.js') }}"></script>
-		<title>WAPM</title>
+	<script type="text/javascript"
+		src="{{ url_for('static', filename='js/i18n/grid.locale-en.js') }}"></script>
+	<script type="text/javascript"
+		src="{{ url_for('static', filename='js/jquery.jqGrid.min.js') }}"></script>
+	<script type="text/javascript"
+		src="{{ url_for('static', filename='js/WebToolKit.MD5.js') }}"></script>
+	<title>WAPM</title>
 	<style>
-		.ui-menu {  float:left;  z-index: 5; }
-	</style>
+.ui-menu {
+	float: left;
+	z-index: 5;
+}
+</style>
 	{% block header %}{% endblock %}
 </header>
-<body>
+<body >
+	<div style="border-radius: 15px;width: 1028px; height: 100%; background-color:  #0B3861; margin-left: auto ;
+  		margin-right: auto ;">
+  		
+	<div  style="border-radius: 15px;width: 1024px;  height: 100%; background-color: #FFFFFF; margin-left: auto ;
+  		margin-right: auto ;">
+		<table >
+			<tr>
+				<td>
+					<div >
 
-			 
-	
-	
-	<div style="position:fixed;left:220px">
-			
-			<img src="/static/images/blue-23957_640.png" width="250px" title="Volver a Pagina Principal" onclick="location.href='/'" 
-			style="cursor:pointer; position:fixed;left:90"/>
-			<br></br>
-			<br></br>
-			
-			
-	</div>
-	<div  style="position:fixed;right:220px">
-		<h4 style="float:right; background-color:#FFFFFF ;text-indent: 4;" >
-			
-			Bienvenido:{{session['username']}}!   
-			<br></br>
-			 <script> document.write( new Date().toLocaleString())</script>
-			<br></br> 
-			 <form action="{{url_for('index')}}" method="post">
-		            <input id="btLogOut" type="submit" name="logout" value="logout" />
-		        </form>
-		     <script>
-					$("#btLogOut").button();
-		    </script>
-			 </h4>
-	</div>
-			
-			
-	
-	<div id="barraHeader" style="clear:both;width:75%;text-align:center; 
-	top:160px;left:200px;position:fixed;	 background-color: #659EC7;"> WAPM. Version 1.0.1
-	</div>
-	
-	 <div id="content" style="top:180px;position:fixed;left:250px;bottom:120px;overflow:auto;">
-	{% block body %}{% endblock %}
-	</div>
-	<div
-	style="float:left; background-color:#E6E6E6; height: 900px;position:fixed;top:0;left:0 ">
-	<iframe width="200px" height="auto" style="border-style:none;"> </iframe>
-	
-	</div>
-	
-	 <div  style="float:right; background-color:#E6E6E6;position:fixed;top:0;height:900px;right:0 ">
-			<iframe width="200px" height="100%" style="border-style:none;"> </iframe>
-	</div> 
-	<div id="barraFooter" style="clear:both;text-align:center; background-color: #0B3861;height: 70px;width:100%;
-	  position: fixed; bottom: 0 ;left:0;right:0">
-	Copyright © WAPM <br></br> Desarrollado por: RALSS    email: prass@software.ralss.py
-	
-	</div>
+						<img src="/static/images/blue-23957_640.png" width="250px"
+							title="Volver a Pagina Principal" onclick="location.href='/'"
+							style="cursor: pointer;" />
+					</div>
+				</td>
+				
+				
+				<td style="width:100%; padding:5px" align="right" >
+					<div  >
+						<h4 style="float: right; text-indent: 4;">
+							Bienvenido:{{session['username']}}! <br></br>
+							<script>
+								document.write(new Date().toLocaleString())
+							</script>
+							<br></br>
+							<form action="{{url_for('index')}}" method="post">
+								<input id="btLogOut" type="submit" name="logout" value="logout" />
+							</form>
+							<script>
+								$("#btLogOut").button();
+							</script>
+						</h4>
+					</div>
+				</td>
+			</tr>
+		</table>
 
+
+
+		<div id="barraHeader"
+			style="clear: both; width: 100%; text-align: center; background-color: #659EC7;">
+			WAPM. Version 1.0.1</div>
+
+
+		<div  id="content" style="overflow: auto;padding:10px">
+			{% block body %}{%endblock %}
+		</div>
+		<br></br>
+		
+	
+			
+	
+	</div>
+	<div id="barraFooter"  style=" position:relative;border-width: 0; bottom:25px;text-align: center;  height: 20px; width: 100%;">
+
+			<table align="center">
+				<tr >
+					<td  >Copyright © WAPM. Desarrollado por: RALSS email: prass@software.ralss.py</td>
+				</tr>
+			</table>
+		</div>
+	
+	
+	</div>
+	
 </body>
 </html>
