--- a/my/templates/itemsManager.html
+++ b/my/templates/itemsManager.html
@@ -1339,16 +1339,19 @@
 <h2>Administrar Items</h2>
 
 
-<td><label>Fase:</label>
-
-
+<table>
+<tr>
+<td><label>Fase: </label>
+</td>
+<td>
 <select id="comboBoxFases"
-	style="display: block; margin-bottom: 12px; padding: 0.4em; width: auto;"
+	style="display: block; margin-bottom: 12px; padding: 6px; width: auto;"
 	class="ui-widget-content ui-corner-all">
 		<option value="0">(Ninguna)</option>
-</select>
-</td>
 
+</select></td>
+</tr>
+</table>
 <tr>
 	<td><div>
 			<table id="listaItems"></table>
