--- a/my/templates/proyectoManager.html
+++ b/my/templates/proyectoManager.html
@@ -2847,12 +2847,10 @@ var banderaRol;
 	<h2>Administracion de Proyectos</h2>
 	<table id="list"></table>
 	<div id="pager"></div>
-		<input id="btFinalizarPy" type="button" name="btFinalizarPy"
-		value="Finalizar Proyecto" onclick='finalizarProyecto()' style="float:right;" />
-		<input id="btActivarPy" type="button" name="btActivarPy"
-		value="Activar Proyecto" onclick='activarProyecto()' style="float:right;" />
+		<br></br> 
+		
 
-	<br></br> 
+	
 		<input id="btAgregar" type="button" name="nuevo"
 		value="Nuevo" onclick='agregar()' /> 
 		<input id="btModificar" type="button" name="detalle" 
@@ -2869,6 +2867,10 @@ var banderaRol;
 		value="Roles" onclick='cargaComboFase()' />
 		<input id="btRolUser" type="button" name="btRolUser"
 		value="Asignar roles a Usuario" onclick='cargaComboUsuario()' /> <br></br>
+		<input id="btFinalizarPy" type="button" name="btFinalizarPy"
+		value="Finalizar Proyecto" onclick='finalizarProyecto()' />
+		<input id="btActivarPy" type="button" name="btActivarPy"
+		value="Activar Proyecto" onclick='activarProyecto()' />
 	<script>
 		$("#btFinalizarPy").button();
 		$("#btActivarPy").button();
