--- a/my/templates/tipoItemManager.html
+++ b/my/templates/tipoItemManager.html
@@ -981,12 +981,20 @@
 
 {% endblock %} {% block body %}
 <h2>Administracion Tipo de Item</h2>
-<td><label>Fase:</label><select id="comboBoxFases"
-	style="display: block; margin-bottom: 12px; padding: 0.4em; width: auto;"
+
+<table>
+<tr>
+<td><label>Fase: </label>
+</td>
+<td>
+<select id="comboBoxFases"
+	style="display: block; margin-bottom: 12px; padding: 6px; width: auto;"
 	class="ui-widget-content ui-corner-all">
 		<option value="0">(Ninguna)</option>
 
 </select></td>
+</tr>
+</table>
 <tr>
 	<td><div>
 			<table id="listaTipoItem"></table>
