Pequenhos cambios. Arreglo parcial sobre el bug de item.

--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -33,7 +33,7 @@
 	{% block header %}{% endblock %}
 </header>
 <body >
-	<div style="border-radius: 15px;width: 1028px; height: 100%; background-color:  #0B3861; margin-left: auto ;
+	<div style="border-radius: 15px;width: 1028px; height: 100%; background-color:  #0B3F80; margin-left: auto ;
   		margin-right: auto ;">
   		
 	<div  style="border-radius: 15px;width: 1024px;  height: 100%; background-color: #FFFFFF; margin-left: auto ;
@@ -90,7 +90,7 @@
 
 			<table align="center">
 				<tr >
-					<td  >Copyright © WAPM. Desarrollado por: RALSS email: prass@software.ralss.py</td>
+					<td  ><h6>Copyright © WAPM. Desarrollado por: RALSS email: ralss@software.ralss.py</h6></td>
 				</tr>
 			</table>
 		</div>
